13 December 2008

* Work around lack of dch. On Linux, the rxvt termcap doesn't have it (it is
  lying, but we can't really start disbelieving termcaps...). This is a bit
  horrible - I can see no way to do it without pretty much redrawing the whole
  line, but it works...

10 December 2008

* glibc's getopt(3) is useless: it is not POSIX compliant without jumping
  through non-portable hoops, and the method of resetting it is unclear (the
  man page on my system says set optind to 1, but other sources say 0). So,
  import OpenBSD's getopt_long.c into compat/ for use on Linux and use the
  clearly documented optreset = optind = 1 method. This fixes some strange
  issues with command parsing (getting the syntax wrong would prevent any
  further commands being parsed).

06 December 2008

* Bring set/setw/show/showw into line with other commands. This means that by
  default they now affect the current window (if any); the new -g flag must be
  passed to set the global options. This changes the behaviour of set/show and
  WILL BREAK CURRENT CONFIGURATIONS.

  In summary, whether in the configuration file, the command prompt, or a key
  binding, use -g to set a global option, use -t to specify a particular window
  or session, or omit both to try and use the current window or session.

  This makes set/show a bit of a pain but is the correct behaviour for
  setw/showw and is the same as every other command, so we can put up with a
  bit of pain for consistency.
* Redo window options. They now work in the same way to session options with a
  global options set. showw/setw commands now have similar syntax to show/set
  (including the ability to use abbreviations).

  PLEASE NOTE this includes the following configuration-breaking changes:
  
  - remain-by-default is now GONE, use "setw -g remain-on-exit" to apply the
    global window option instead;
  - mode-keys is now a window option rather than session - use "setw [-g]
    mode-keys" instead of set.
  