@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.66 2008-12-10 20:25:41 nicm Exp $ */
+/* $Id: cmd.c,v 1.67 2008-12-15 21:21:56 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -65,6 +65,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_show_buffer_entry,
 	&cmd_show_options_entry,
 	&cmd_show_window_options_entry,
+	&cmd_source_file_entry,
 	&cmd_start_server_entry,
 	&cmd_swap_window_entry,
 	&cmd_switch_client_entry,
