@@ -1,3 +1,8 @@
+15 December 2008
+
+* New command, source-file (alias source), to load a configuration
+  file. Written by Tiago Cunha, many thanks.
+
 13 December 2008
 
 * Work around lack of dch. On Linux, the rxvt termcap doesn't have it (it is
@@ -779,7 +784,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.173 2008-12-13 17:41:49 nicm Exp $
+$Id: CHANGES,v 1.174 2008-12-15 21:21:56 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
